--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -30,7 +30,7 @@ jobs:
          with:
            skicka-tokencache-json: ${{ secrets.SKICKA_TOKENCACHE_JSON }}
            upload-from: ./upload
-           upload-to: /path/to/upload
+           upload-to: /path/to
 # For those who set up Google Drive API client ID and secret themselves
            google-client-id: ${{ secrets.GOOGLE_CLIENT_ID }}
            google-client-secret: ${{ secrets.GOOGLE_CLIENT_SECRET }}
