--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -8,18 +8,23 @@ on: [push]
 
 jobs:
 
+env:
+  # ビルドサーバでビルドに使用する Unity.exe の格納パス
+  BUILD_SERVER_UNITY_PATH: "/Applications/Unity/2021.2.17f1"
+
 # ジョブの名前
   build:
     # セルフホストランナーで実行
     runs-on: self-hosted
     steps:
-       - name: Checkout
-         uses: actions/checkout@v2
-         # リポジトリのチェックアウト時にLibraryフォルダ等を消さないよう「clean: false」
-         # Git LFSを使用している場合は 「lfs: true」が必要
-         with:
-           lfs: true
-           clean: false
+       #- name: Checkout
+       #  #チェックアウト操作自体を行うなら不要？
+       #  uses: actions/checkout@v2
+       #  # リポジトリのチェックアウト時にLibraryフォルダ等を消さないよう「clean: false」
+       #  # Git LFSを使用している場合は 「lfs: true」が必要
+       #  with:
+       #    lfs: true
+       #    clean: false
 
        # 1 つのセルフホスト ランナーは、一度に 1 つのジョブしか実行できません。
        # 使用可能なランナーがアイドル状態でない場合、後続のジョブは、使用可能なランナーがアイドル状態になるまでキューに入れられます。
@@ -28,15 +33,16 @@ jobs:
        - name: Unity Build
          shell: cmd
          run: |
-           "/Applications/Unity/2021.2.17f1" -quit -batchmode -projectPath . -executeMethod CI.Build -buildTarget Android -setDefaultPlatformTextureFormat astc -nographics -logFile -
+           $BUILD_SERVER_UNITY_PATH -quit -batchmode -projectPath . -executeMethod AutomaticBuild.BuildAndroid -buildTarget Android -setDefaultPlatformTextureFormat astc -nographics -logFile ./buildoutput.log
 
-       # Copy-Item でビルドされた .apk ファイルを確保しています。コピー先フォルダを適当に変更してください。
+       # Copy-Item (※PowerShell用コマンド) でビルドされた .apk ファイルを確保しています。コピー先フォルダを適当に変更してください。
        - name: Release
          run: Copy-Item Build\Application.apk D:\Builds\Application${{ github.run_number }}.apk
 
   upload:
     # 最新のubuntuで実行？
     runs-on: ubuntu-latest
+    needs: build
     steps:
        # Google Driveにアップロードするファイルが入るディレクトリ作成
        - run: |
@@ -46,7 +52,9 @@ jobs:
        # テスト用ファイルを作成ディレクトリに配置
        - name: Upload file create
          id: file_create
-         run: echo "##[set-output name=branch;]$(echo upload_test. > upload/UploadTest.txt)"
+         run: echo "branch=$(echo upload_test. > upload/UploadTest.txt)" >> $GITHUB_OUTPUT
+       # set-output は非推奨え廃止予定のため書き換え
+       # run: echo "##[set-output name=branch;]$(echo upload_test. > upload/UploadTest.txt)"
 
        # Google Drive へのアップロード
        - name: Upload to Google Drive
