Error: cmd: command not found 対応

--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -8,7 +8,7 @@ on: [push]
 
 env:
   # ビルドサーバでビルドに使用する Unity.exe の格納パス
-  BUILD_SERVER_UNITY_PATH: /Applications/Unity/2021.2.17f1
+  BUILD_SERVER_UNITY_PATH:/Applications/Unity/2021.2.17f1
 
 jobs:
 # ジョブの名前
@@ -32,7 +32,7 @@ jobs:
        - name: Unity Build
          shell: cmd
          run: |
-           ${{ env.BUILD_SERVER_UNITY_PATH }}/Unity.app/Contents/MacOS/Unity -quit -batchmode -projectPath . -executeMethod Builder.BuildAndroid -buildTarget Android -setDefaultPlatformTextureFormat astc -nographics -logFile ./buildoutput.log
+           ${{ env.BUILD_SERVER_UNITY_PATH }}/Unity.app/Contents/MacOS/Unity -quit -batchmode -nographics -projectPath . -executeMethod Builder.BuildAndroid Android
 
        # Copy-Item (※PowerShell用コマンド) でビルドされた .apk ファイルを確保しています。コピー先フォルダを適当に変更してください。
        - name: Release
