--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -33,12 +33,11 @@ jobs:
        #  https://github.com/orgs/community/discussions/26769
        - name: Unity Build
          shell: cmd
-         run: |
-           ${{ env.BUILD_SERVER_UNITY_PATH }}/Unity.app/Contents/MacOS/Unity -quit -batchmode -nographics -projectPath ${{ env.BUILD_SERVER_PROJECT_PATH }} -executeMethod Builder.BuildAndroid Android
+         run: ${{ env.BUILD_SERVER_UNITY_PATH }}/Unity.app/Contents/MacOS/Unity -quit -batchmode -nographics -projectPath ${{ env.BUILD_SERVER_PROJECT_PATH }} -executeMethod Builder.BuildAndroid Android
 
        # Copy-Item (※PowerShell用コマンド) でビルドされた .apk ファイルを確保しています。コピー先フォルダを適当に変更してください。
-       - name: Release
-         run: Copy-Item Build\Application.apk D:\Builds\Application${{ github.run_number }}.apk
+       #- name: Release
+       #  run: Copy-Item Build\Application.apk D:\Builds\Application${{ github.run_number }}.apk
 
   upload:
     # 最新のubuntuで実行？
