--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -39,33 +39,33 @@ jobs:
        #- name: Release
        #  run: Copy-Item Build\Application.apk D:\Builds\Application${{ github.run_number }}.apk
 
-  upload:
-    # 最新のubuntuで実行？
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-       # Google Driveにアップロードするファイルが入るディレクトリ作成
-       - run: |
-           mkdir upload
-           find . -name "*.pdf" | xargs -I{} sh -c 'mkdir -p $(dirname {}); cp "{}" $(dirname "upload/{}")'
-
-       # テスト用ファイルを作成ディレクトリに配置
-       - name: Upload file create
-         id: file_create
-         run: echo "branch=$(echo upload_test. > upload/UploadTest.txt)" >> $GITHUB_OUTPUT
-       # set-output は非推奨え廃止予定のため書き換え
-       # run: echo "##[set-output name=branch;]$(echo upload_test. > upload/UploadTest.txt)"
-
-       # Google Drive へのアップロード
-       - name: Upload to Google Drive
-         uses: satackey/action-google-drive@v1
-         with:
-           skicka-tokencache-json: ${{ secrets.SKICKA_TOKENCACHE_JSON }}
-           upload-from: ./upload
-           upload-to: /path/to
-         # For those who set up Google Drive API client ID and secret themselves
-           google-client-id: ${{ secrets.GOOGLE_CLIENT_ID }}
-           google-client-secret: ${{ secrets.GOOGLE_CLIENT_SECRET }}
+#  upload:
+#    # 最新のubuntuで実行？
+#    runs-on: ubuntu-latest
+#    needs: build
+#    steps:
+#       # Google Driveにアップロードするファイルが入るディレクトリ作成
+#       - run: |
+#           mkdir upload
+#           find . -name "*.pdf" | xargs -I{} sh -c 'mkdir -p $(dirname {}); cp "{}" $(dirname "upload/{}")'
+#
+#       # テスト用ファイルを作成ディレクトリに配置
+#       - name: Upload file create
+#         id: file_create
+#         run: echo "branch=$(echo upload_test. > upload/UploadTest.txt)" >> $GITHUB_OUTPUT
+#       # set-output は非推奨え廃止予定のため書き換え
+#       # run: echo "##[set-output name=branch;]$(echo upload_test. > upload/UploadTest.txt)"
+#
+#       # Google Drive へのアップロード
+#       - name: Upload to Google Drive
+#         uses: satackey/action-google-drive@v1
+#         with:
+#           skicka-tokencache-json: ${{ secrets.SKICKA_TOKENCACHE_JSON }}
+#           upload-from: ./upload
+#           upload-to: /path/to
+#         # For those who set up Google Drive API client ID and secret themselves
+#           google-client-id: ${{ secrets.GOOGLE_CLIENT_ID }}
+#           google-client-secret: ${{ secrets.GOOGLE_CLIENT_SECRET }}
 
 # Google Drive からのダウンロード
 #       - name: Download from Google Drive
