通知メッセージ確認

--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -64,15 +64,17 @@ jobs:
            
            # アップロードファイルのJson情報からIDを取得
            GOOGLE_DRIVE_ID=`rclone lsjson ${{ env.RCLONE_USE_CONFIGURE_NAME }}:"${{ env.GOOGLE_DRIVE_UPLOAD_FOLDER }}/${BUILD_FILE_NAME}" | sed -E "s/.*\\"ID\\":\\"(.+)\\"\\}.*/\\1/"`
+           echo ${GOOGLE_DRIVE_ID}
            
            # IDからURLを作成
-           FILE_URL=`echo ${{ env.GOOGLE_DRIVE_URL_TEMPLATE }} | sed -E "s/\|\|FILE_ID\|\|/${GOOGLE_DRIVE_ID}/"`
+           FILE_URL=`echo ${{ env.GOOGLE_DRIVE_URL_TEMPLATE }} | sed -E "s/\\|\\|FILE_ID\\|\\|/${GOOGLE_DRIVE_ID}/"`
+           echo ${FILE_URL}
            
            # Chatwork へ通知メッセージを送信
            # 
            # 要：ChatworkAPIトークンの環境変数への設定
            #
-           SEND_MESSAGE="apkファイルがアップロードされました。"\n"${FILE_URL}"
+           SEND_MESSAGE=`echo -e apkファイルがアップロードされました。"\n"${FILE_URL}`
            echo -e ${SEND_MESSAGE}
            curl --request POST \
                 --url https://api.chatwork.com/v2/rooms/${{ env.CHATWORK_ROOM_ID }}/messages \
