--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -68,15 +68,15 @@ jobs:
            echo ${GOOGLE_DRIVE_ID}
            
            # IDからURLを作成
-           FILE_URL=`echo ${{ env.GOOGLE_DRIVE_URL_TEMPLATE }} | sed -E "s/\\|\\|FILE_ID\\|\\|/${GOOGLE_DRIVE_ID}/"`
+           FILE_URL=`echo "${{ env.GOOGLE_DRIVE_URL_TEMPLATE }}" | sed -E "s/\\|\\|FILE_ID\\|\\|/${GOOGLE_DRIVE_ID}/"`
            echo ${FILE_URL}
            
            # Chatwork へ通知メッセージを送信
            # 
            # 要：ChatworkAPIトークンの環境変数への設定
            #
-           SEND_MESSAGE=`echo -E apkファイルがアップロードされました。"\n"${FILE_URL}`
-           echo -E ${SEND_MESSAGE}
+           SEND_MESSAGE=`echo -e apkファイルがアップロードされました。"\n"${FILE_URL}`
+           echo -e ${SEND_MESSAGE}
            curl --request POST \
                 --url https://api.chatwork.com/v2/rooms/${{ env.CHATWORK_ROOM_ID }}/messages \
                 --header 'accept: application/json' \
