--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -74,8 +74,9 @@ jobs:
            # 要：ChatworkAPIトークンの環境変数への設定
            #
            SEND_MESSAGE=`echo -e apkファイルがアップロードされました。"\n"${FILE_URL}`
-           echo -e ${SEND_MESSAGE}
-           echo ${CHATWORK_API_TOKEN}
+           #echo -e ${SEND_MESSAGE}
+           #echo ${CHATWORK_API_TOKEN}
+           SEND_MESSAGE="${FILE_URL}"
            curl --request POST \
                 --url https://api.chatwork.com/v2/rooms/${{ env.CHATWORK_ROOM_ID }}/messages \
                 --header 'accept: application/json' \
