--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -1,7 +1,7 @@
-# test work file
+# auto build work file
 
 #  GitHub リポジトリの Actions ページで表示されるワークフローの名前
-name: learn-github-actions
+name: auto-build
 
 # トリガーアクション（対象ブランチ指定はなし）
 on: [push]
@@ -12,9 +12,13 @@ env:
   # ビルドサーバでビルド対象となるプロジェクトのパス
   BUILD_SERVER_PROJECT_PATH: '"/Users/unity-build/project/GithubActionsBuildProto/GitHubActionsTest/My project"'
   # ビルドファイルが格納される一時フォルダの名前
+  # （ビルド用Unityスクリプト内で定義した出力先フォルダ）
   BUILD_FILE_INCLUDE_FOLDER: BuildFiles
   # アップロード先の GoogleDriveフォルダパス
-  GOOGLE_DRIVE_UPLOAD_FOLDER: path/to
+  #GOOGLE_DRIVE_UPLOAD_FOLDER: path/to
+  # アップロード先の GoogleDriveフォルダID
+  # ※サーバ側で clone コマンドにて事前設定？
+  #GOOGLE_DRIVE_UPLOAD_FOLDER_ID: 
   # ビルドサーバで実行する rclone コマンドにて使用する設定の名前
   #  https://rclone.org/drive/#standard-options
   RCLONE_USE_CONFIGURE_NAME: gdrive
@@ -60,10 +64,12 @@ jobs:
            BUILD_FILE_NAME=`ls -rt ./${{ env.BUILD_FILE_INCLUDE_FOLDER }}/*.apk | tail -n 1 | sed -E "s/^.*\\/([^\\/]*\\.apk)$/\\1/"`
        
            # ビルド結果のアップロード
-           rclone --drive-shared-with-me copy "./${{ env.BUILD_FILE_INCLUDE_FOLDER }}/${BUILD_FILE_NAME}" ${{ env.RCLONE_USE_CONFIGURE_NAME }}:${{ env.GOOGLE_DRIVE_UPLOAD_FOLDER }}
+           #rclone --drive-shared-with-me copy "./${{ env.BUILD_FILE_INCLUDE_FOLDER }}/${BUILD_FILE_NAME}" ${{ env.RCLONE_USE_CONFIGURE_NAME }}:${{ env.GOOGLE_DRIVE_UPLOAD_FOLDER }}
+           rclone --drive-shared-with-me copy "./${{ env.BUILD_FILE_INCLUDE_FOLDER }}/${BUILD_FILE_NAME}" ${{ env.RCLONE_USE_CONFIGURE_NAME }}:
            
            # アップロードファイルのJson情報からIDを取得
-           GOOGLE_DRIVE_ID=`rclone lsjson ${{ env.RCLONE_USE_CONFIGURE_NAME }}:"${{ env.GOOGLE_DRIVE_UPLOAD_FOLDER }}/${BUILD_FILE_NAME}"`
+           #GOOGLE_DRIVE_ID=`rclone lsjson ${{ env.RCLONE_USE_CONFIGURE_NAME }}:"${{ env.GOOGLE_DRIVE_UPLOAD_FOLDER }}/${BUILD_FILE_NAME}"`
+           GOOGLE_DRIVE_ID=`rclone lsjson ${{ env.RCLONE_USE_CONFIGURE_NAME }}:"${BUILD_FILE_NAME}"`
            GOOGLE_DRIVE_ID=`echo ${GOOGLE_DRIVE_ID} | sed -E "s/.*\\"ID\\":\\"(.+)\\"\\}.*/\\1/"`
            
            # IDからURLを作成
